--- a/aoc/Cargo.toml
+++ b/aoc/Cargo.toml
@@ -10,4 +10,4 @@ proc-macro=true
 [dependencies]
 quote = "1.0"
 proc-macro2 = "1.0"
-syn = { version = "1.0", features = ["full"] }
+syn = { version = "1.0", features = ["full", "extra-traits"] }
