--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,10 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1"
 aoc = { path = "aoc" }
 regex = "1"
+
+[[bin]]
+name = "day8"
+path = "src/day8.rs"
