--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2018"
 anyhow = "1"
 aoc = { path = "aoc" }
 regex = "1"
+itertools = "0.9"
 
 [[bin]]
 name = "day1"
@@ -86,3 +87,7 @@ path = "src/day18.rs"
 [[bin]]
 name = "day19"
 path = "src/day19.rs"
+
+[[bin]]
+name = "day20"
+path = "src/day20.rs"
