--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,11 @@ edition = "2018"
 [dependencies]
 anyhow = "1"
 aoc = { path = "aoc" }
-regex = "1"
 itertools = "0.9"
+regex = "1"
+
+[profile.release]
+debug = true
 
 [[bin]]
 name = "day1"
